--- a/MPfm.WPF/Classes/App.xaml
+++ b/MPfm.WPF/Classes/App.xaml
@@ -66,7 +66,7 @@
                                     </VisualState>
                                 </VisualStateGroup>
                             </VisualStateManager.VisualStateGroups>
-                            <Border x:Name="borderButton" BorderThickness="4" CornerRadius="8" Margin="0" Padding="0" Height="35" Background="#FFE74C3C">
+                            <Border x:Name="borderButton" BorderThickness="4" CornerRadius="8" Margin="0" Padding="0" Background="#FFE74C3C">
                                 <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
                             </Border>
                         </Grid>
